welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:2: error: ')' expected but integer literal found.
  if (a%3==0 11 a%5==0)
             ^fizzBuzz:10: error: illegal start of simple expression
}
^